통신완료 SQLite X 그래프2개 완료 임시버튼 2개. 메인테스트가능

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,10 @@
         <activity
             android:name=".Graph1Activity"
             android:label="@string/title_activity_graph1"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".Graph2Activity"
+            android:label="@string/title_activity_graph2"
             android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
